ferritin/src/snapshots/ferritin__tests__get_trait_method_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestTrait::test_method\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/trait.TestTrait.html#method.test_method",
  "meta": {
    "name": "test_method",
    "kind": "function",
    "visibility": "private",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "A method",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "function",
    "name": "test_method",
    "returns": [
      {
        "text": "String",
        "style": "TypeName",
        "url": "http://docs.rust-lang.org/nightly/alloc/string/struct.String.html",
        "path": "alloc::string::String"
      }
    ],
    "signature": [
      {
        "text": "fn",
        "style": "Keyword"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "test_method",
        "style": "Plain",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/trait.TestTrait.html#method.test_method"
      },
      {
        "text": "(",
        "style": "Punctuation"
      },
      {
        "text": "&",
        "style": "Punctuation"
      },
      {
        "text": "self",
        "style": "Plain"
      },
      {
        "text": ")",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "->",
        "style": "Operator"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "String",
        "style": "TypeName",
        "url": "http://docs.rust-lang.org/nightly/alloc/string/struct.String.html",
        "path": "alloc::string::String"
      }
    ]
  }
}
