ferritin/src/snapshots/ferritin__tests__get_trait_method_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_method\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Item: test_method
Kind: Function
Visibility: Private

A method

fn test_method(&self) -> String
