ferritin/src/snapshots/ferritin__tests__get_trait_method_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_method\"),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Item: test_method
Kind: Function
Visibility: Private

A method

fn [test_method](https://docs.rs/fixture-crate/0.1.0/fixture-crate/)(&self) -> [String](http://docs.rust-lang.org/nightly/alloc/string/struct.String.html)
