ferritin/src/snapshots/ferritin__tests__get_trait_simple_interactive_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_interactive_for_tests(Commands::get(\"crate::TestTrait\"))"
---
"   Item: TestTrait                                                              "
"   Kind: Trait                                                                  "
"   Visibility: Public                                                           "
"   Defined at: fixture_crate::TestTrait                                         "
"   In crate: fixture-crate (0.1.0)                                              "
"                                                                                "
"   A trait for testing extremely long documentation that exceeds line limits.   "
"                                                                                "
"   This trait provides a comprehensive interface for data processing            "
"   operations. It demonstrates various method signatures including mutable      "
"   references, error handling, and different return types. The trait is         "
"   designed to be flexible and extensible for different use cases in data       "
"   processing pipelines. Each method serves a specific purpose in the data      "
"   transformation workflow. The implementation should handle edge cases         "
"   gracefully and provide meaningful error messages when operations fail. This  "
"   documentation intentionally spans many lines to test the line-based          "
"   truncation when paragraph truncation doesn't apply. We want to see how the   "
"   system handles documentation that goes well beyond the 16-line limit and     "
"   should trigger line-based truncation. This continues for several more lines  "
"   to ensure we exceed the limit. Line 14 of this very long paragraph that      "
"   should be truncated. Line 15 of this extremely verbose documentation         "
"   example. Line 16 which should be the last line shown in brief mode. Line 17  "
"   that should be hidden and show a truncation indicator. Line 18 that          "
"   definitely won't be visible in brief mode.                                   "
"                                                                                "
"   Additional sections after the long paragraph                                 "
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"                                                                                "
"   This section should not be visible in brief mode since the first paragraph   "
"   already exceeded the line limit.                                             "
"                                                                                "
"   trait TestTrait { ... }                                                      "
"                                                                                "
"     ◦ const ASSOCIATED_CONSTANT: ();                                           "
"       trait associated constant                                                "
"                                                                                "
"     ◦ type T: Clone;                                                           "
"       trait associated type                                                    "
"                                                                                "
"     ◦ fn test_method(&self) -> String;                                         "
"       A method                                                                 "
"                                                                                "
"     ◦ fn process(&mut self, data: &str) -> Result<(), String>;                 "
"       Another method with parameters                                           "
"                                                                                "
"   Implementors (this crate)                                                    "
"                                                                                "
"     ◦ TestStruct                                                               "
"           type T = String                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂"
"   ferritin - q:quit ?:help ←/→:history g:go s:search l:list c:code             "
